--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "dependencies": {
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "string-tokenizer": "0.0.8"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
