--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "string-tokenizer": "0.0.8"
   },
   "devDependencies": {
+    "gh-pages": "^1.1.0",
     "react-scripts": "0.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
