--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "currency.js": "^1.1.0",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "string-tokenizer": "0.0.8"
+    "react-dom": "^15.4.2"
   },
   "devDependencies": {
     "gh-pages": "^1.1.0",
